load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)
filegroup(
    name = "ddk_makefile",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)
ddk_headers(
    name = "ddk_public_headers",
    includes = ["."],
    hdrs = glob(["**/*.h"]), # export all headers for other modules to use
)
define_mgk_ddk_ko(
    name = "zram",
    srcs = [
    "zram_drv.c",
    "zcomp.c",
    ],
    hdrs = glob(["**/*.h"]),
    ko_deps = [],
    includes = ["."],
    copts = [
        "-I$(srctree)/drivers/block/zram",
    ],
    out = "zram.ko",
)
