load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
	default_visibility = [
		"//visibility:public",
	],
)

ddk_headers(
	name = "headers",
	hdrs = glob(["**/*.h"]),
	includes = ["."],
	linux_includes = [
		"include",
	],
)

filegroup(
	name = "ddk_kconfigs",
	srcs = glob([
		"**/Kconfig",
	]),
)

filegroup(
	name = "srcs",
	srcs = glob([
		"**/Makefile",
		"**/Kbuild",
		"**/*.c",
		"**/*.h",
	]),
)

define_mgk_ddk_ko(
	name = "rpmb",
	out = "rpmb.ko",
	srcs = [
		"core.c",
	],
	header_deps = [
	],
	hdrs = [
		"rpmb-cdev.h"
	],
	ko_deps = [
	],
	includes = [
		".",
		"drrpmb_gp/public",
	],
	conditional_srcs = {
		"CONFIG_RPMB_INTF_DEV": {
			True: [
				"cdev.c",
			],
		},
	},
	local_defines = [
		"__CHECK_ENDIAN",
	],
	copts = [
	],
)

define_mgk_ddk_ko(
	name = "rpmb-mtk",
	out = "rpmb-mtk.ko",
	srcs = [
		"rpmb-mtk.c",
	],
	header_deps = [
		"//kernel_device_modules-{}/drivers/tee/gud:mobicore_public_hdrs".format(kernel_version),
		"//kernel_device_modules-{}/drivers/mmc/host:msdc_headers".format(kernel_version),
	],
	hdrs = [
		"rpmb-mtk.h",
		"drrpmb_gp/public/dci.h",
		"drrpmb_gp/public/drrpmb_Api.h",
		"drrpmb_gp/public/drrpmb_gp_Api.h",
	],
	ko_deps = [
		"//kernel_device_modules-{}/drivers/tee/gud:mcDrvModule".format(kernel_version),
		"//kernel_device_modules-{}/drivers/char/rpmb:rpmb".format(kernel_version),
		"//kernel_device_modules-{}/drivers/ufs:ufs-mediatek-mod".format(kernel_version),
	],
	includes = [
		".",
		"drrpmb_gp/public",
	],
	conditional_srcs = {
	},
	local_defines = [
		"__CHECK_ENDIAN",
	],
	copts = [
		"-I$(srctree)/drivers/ufs",
		"-I$(srctree)/drivers/mmc",
		"-I$(srctree)/drivers/mmc/host",
	],
)
